add/edit/remove extraatjes

--- a/todo
+++ b/todo
@@ -10,7 +10,7 @@ x extraatjes bij aanwezigheden
 x Nieuwe aanwezigheid
 x aanwezigheid verwijderen
 x aanwezigheid bewerken
-geboortejaar bij kinderen
+x geboortejaar bij kinderen
 
 uitstappen maken
 uitstappen wijzigen
