Minor changes to uitstappen view

--- a/todo
+++ b/todo
@@ -30,3 +30,8 @@ aanwezigheden per dag opschuiven
 
 kolomhoofd klikken -> sorteren op kolom
 pdf print-out -> hoe kolommen selecteren die geprint worden?
+
+
+NOW, DO THIS NOW NOW NOW!
+navigating to uitstappen from dashboard -> highlight selected uitstap!
+
