--- a/todo
+++ b/todo
@@ -1,27 +1,8 @@
-x tooltip bij aanwezigheden (kopiëren van Kinderen? )
-x controls in aanwezigheden/kinderen uniform met de andere kolommen maken
-x merge andere info en medische info
-x tooltip voor medische info
-x 1 voogd -> 1 kind (meerdere kinden -> andere voogden voor db)
-x Zoekinterface kinderen (fulltext of iets in die aard?)
 voogd weergeven (indien meerdere voogden)
 saldo
-x extraatjes bij aanwezigheden
-x Nieuwe aanwezigheid
-x aanwezigheid verwijderen
-x aanwezigheid bewerken
-x geboortejaar bij kinderen
-
-uitstappen maken
-uitstappen wijzigen
-	Omschrijving
-	Datum
-	Actief
-	
+uitstappen:	
 	Kinderen toevoegen via uitstappenoverzicht (kind of kindvoogd?)
-
 	kinderen toevoegen via kinderenoverzicht
-
 	uitstappen deactiveren (Floris op een pintje trakteren om hem terug te krijgen :D)
 
 
@@ -30,8 +11,4 @@ aanwezigheden per dag opschuiven
 
 kolomhoofd klikken -> sorteren op kolom
 pdf print-out -> hoe kolommen selecteren die geprint worden?
-
-
-NOW, DO THIS NOW NOW NOW!
-navigating to uitstappen from dashboard -> highlight selected uitstap!
-
+uitstap wijzigen: datum datepicker
