--- a/todo
+++ b/todo
@@ -7,3 +7,6 @@ uitstappen:
 
 abort queries
 aanwezigheden per dag opschuiven
+werkingen toevoegen/bewerken
+dashboard links to lists
+code splitsen
