Voogd toevoegen herschreven

--- a/todo
+++ b/todo
@@ -10,3 +10,9 @@ aanwezigheden per dag opschuiven
 werkingen toevoegen/bewerken
 dashboard links to lists
 code splitsen
+
+
+aanwezigheid wijzigen!
+form validation aanwezigheid/kinderen
+bloodhound leegmaken (ook bij lose-focus)
+	lijst, aanwezigheid, kind-voogd
