Werkingen wijzigen/verwijderen/toevoegen

--- a/todo
+++ b/todo
@@ -6,8 +6,7 @@ uitstappen:
 
 abort queries
 aanwezigheden per dag opschuiven
-werkingen toevoegen/bewerken
 code splitsen
 
 form validation aanwezigheid/kinderen
-
+extraatjes enkel voor bepaalde werkingen
