add vordering klasse

--- a/todo
+++ b/todo
@@ -9,3 +9,4 @@ aanwezigheden per dag opschuiven
 
 form validation aanwezigheid/kinderen
 extraatjes enkel voor bepaalde werkingen
+snellere queries
