--- a/todo
+++ b/todo
@@ -10,3 +10,5 @@ aanwezigheden per dag opschuiven
 form validation aanwezigheid/kinderen
 extraatjes enkel voor bepaalde werkingen
 snellere queries
+
+vorderingen gewijzigd, niet opslaan -> verwittiging
