--- a/todo
+++ b/todo
@@ -12,3 +12,4 @@ extraatjes enkel voor bepaalde werkingen
 snellere queries
 
 vorderingen gewijzigd, niet opslaan -> verwittiging
+geen dubbele voogdsuggesties
