saldo overzicht per kindvoogd (enkel vorderingen)

--- a/todo
+++ b/todo
@@ -8,6 +8,7 @@ abort queries
 aanwezigheden per dag opschuiven
 
 form validation aanwezigheid/kinderen
+	kindvoogden waarvoor aanwezigheden bestaan kunnen niet verwijderd worden
 extraatjes enkel voor bepaalde werkingen
 snellere queries
 
