Update saldo fix

--- a/todo
+++ b/todo
@@ -1,6 +1,8 @@
 uitstappen:	
-	kinderen toevoegen via kinderenoverzicht
-	kinderen toevoegen via aanwezighedenoverzicht
+	kinderenoverzicht (enkel overzicht)
+	kinderen toevoegen via aanwezighedenoverzicht (lijst met checkboxen van actieve uitstappen)
+	uitstap-Actief wordt gesplitst in: DashboardVisible, AanwezigheidVisible
+schulden filter
 
 abort queries, keep track of time-of-request!
 
