Uitstappen overzicht op kind pagina

--- a/todo
+++ b/todo
@@ -15,3 +15,7 @@ snellere queries
 
 vorderingen gewijzigd, niet opslaan -> verwittiging
 geen dubbele voogdsuggesties
+
+backup-functie
+
+wat moet gewist worden per jaar, wat moet blijven staan en wat moet verborgen worden?
