--- a/todo
+++ b/todo
@@ -16,3 +16,6 @@ vorderingen gewijzigd, niet opslaan -> verwittiging
 geen dubbele voogdsuggesties
 
 wat moet gewist worden per jaar, wat moet blijven staan en wat moet verborgen worden?
+clean status in instellingen: 
+    vorderingen zonder aanwezigheden
+    uitstapdeelnames zonder uitstap/kind
