--- a/todo
+++ b/todo
@@ -1,4 +1,5 @@
 abort queries, keep track of time-of-request!
+nieuwe uitstap -> return id so it can be loaded at the right
 vordering wijzigen in kinderen overzicht
 fix kinderen pdf
 fix pdf modal
