Bijhouden of een kind 's middags op het speelplein eet of naar huis gaat

--- a/todo
+++ b/todo
@@ -15,3 +15,11 @@ clean status in instellingen:
     vorderingen zonder aanwezigheden
     uitstapdeelnames zonder uitstap/kind
 
+
+lunch/thuis eten
+eigen titel voor de lijsten
+
+pdf extraatjes
+rand van de tabel
+uitstap verwijderen mislukt
+titeltjes modals nieuwe aanwezigheid/aanwezigheid update
