Aanwezigheid: titel voor PDF

--- a/todo
+++ b/todo
@@ -16,8 +16,7 @@ clean status in instellingen:
     uitstapdeelnames zonder uitstap/kind
 
 
-lunch/thuis eten
-eigen titel voor de lijsten
+x eigen titel voor de lijsten
 
 pdf extraatjes
 rand van de tabel
