Verwijderen van uitstap fix

--- a/todo
+++ b/todo
@@ -19,6 +19,6 @@ clean status in instellingen:
 x eigen titel voor de lijsten
 
 pdf extraatjes
-rand van de tabel
-uitstap verwijderen mislukt
+x rand van de tabel
+x uitstap verwijderen mislukt
 titeltjes modals nieuwe aanwezigheid/aanwezigheid update
