Aangepaste titels modals aanwezigheden/kinderen/uitstappen

--- a/todo
+++ b/todo
@@ -21,4 +21,4 @@ x eigen titel voor de lijsten
 pdf extraatjes
 x rand van de tabel
 x uitstap verwijderen mislukt
-titeltjes modals nieuwe aanwezigheid/aanwezigheid update
+x titeltjes modals nieuwe aanwezigheid/aanwezigheid update
