PDF Extraatjes bij aanwezigheden fix

--- a/todo
+++ b/todo
@@ -18,7 +18,7 @@ clean status in instellingen:
 
 x eigen titel voor de lijsten
 
-pdf extraatjes
+x pdf extraatjes
 x rand van de tabel
 x uitstap verwijderen mislukt
 x titeltjes modals nieuwe aanwezigheid/aanwezigheid update
