--- a/todo
+++ b/todo
@@ -22,3 +22,5 @@ x pdf extraatjes
 x rand van de tabel
 x uitstap verwijderen mislukt
 x titeltjes modals nieuwe aanwezigheid/aanwezigheid update
+
+filteren en printen van "belangrijke informatie"
