--- a/todo
+++ b/todo
@@ -23,4 +23,4 @@ x rand van de tabel
 x uitstap verwijderen mislukt
 x titeltjes modals nieuwe aanwezigheid/aanwezigheid update
 
-filteren en printen van "belangrijke informatie"
+x filteren en printen van "belangrijke informatie"
