Autofocus nieuw kind/nieuwe aanwezigheid

--- a/todo
+++ b/todo
@@ -24,3 +24,5 @@ x uitstap verwijderen mislukt
 x titeltjes modals nieuwe aanwezigheid/aanwezigheid update
 
 x filteren en printen van "belangrijke informatie"
+
+slimme preset nieuw kind -> jaartal/werking
