Wijzigen kinderen foutmelding fix

--- a/todo
+++ b/todo
@@ -28,5 +28,6 @@ x filteren en printen van "belangrijke informatie"
 slimme preset nieuw kind -> jaartal/werking
 
 pdf naar huis tussen de middag
+aanwezigheid wijzigen -> naam van knop toevoegen
 geboortedatum tonen in aanwezigheden
 wijzigen kind: klagen over geboortedatum
