Middag naar huis in pdf

--- a/todo
+++ b/todo
@@ -27,7 +27,7 @@ x filteren en printen van "belangrijke informatie"
 
 slimme preset nieuw kind -> jaartal/werking
 
-pdf naar huis tussen de middag
+x pdf naar huis tussen de middag
 aanwezigheid wijzigen -> naam van knop toevoegen
 geboortedatum tonen in aanwezigheden
-wijzigen kind: klagen over geboortedatum
+x wijzigen kind: klagen over geboortedatum
