--- a/todo
+++ b/todo
@@ -28,6 +28,6 @@ x filteren en printen van "belangrijke informatie"
 slimme preset nieuw kind -> jaartal/werking
 
 x pdf naar huis tussen de middag
-aanwezigheid wijzigen -> naam van knop toevoegen
-geboortedatum tonen in aanwezigheden
+x aanwezigheid wijzigen -> naam van knop toevoegen
+x geboortedatum tonen in aanwezigheden
 x wijzigen kind: klagen over geboortedatum
